--- a/config.yaml
+++ b/config.yaml
@@ -82,7 +82,7 @@ params:
       text: In portoghese si chiama "Cesta Basica". Non è altro che una scatola contenente alimenti di prima necessità come riso, pasta, fagioli, latte, farina e biscotti. Viene spesso usata come dono per le persone più bisognose. Aiuta una famiglia di 4-5 persone per una settimana.
       icon: mani
     - title: Quanto costa?
-      text: Un cesto costa 32 Reali. Grazie alla conversione BRL/EUR, 32 Reali sono equivalenti a soli 6 Euro. Praticamente il prezzo di uno cappuccino con cornetto, può aiutare famiglia in difficoltà per una settimana. 
+      text: Un cesto costa 32 Reali. Grazie alla conversione BRL/EUR, 32 Reali sono equivalenti a soli 6 Euro. Praticamente il prezzo di una pizza margherita, può aiutare famiglia in difficoltà per una settimana. 
       icon: mela
   section3:
     title: Un gesto di umanità
