--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://something-fresh.org/
+baseURL: https://aiutiamo-cumbuco.com/
 languageCode: it-IT
 title: Aiutamo Cumbuco
 theme: hugo-fresh
